--- a/knopka/MainWindow.xaml
+++ b/knopka/MainWindow.xaml
@@ -50,32 +50,22 @@
             <Button.Template>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Grid>
-                        
                         <Ellipse Width="100" Height="100" Name="grey" Fill="Gray"/>
                         <Ellipse Width="80" Height="80" Name="orgn" Fill="Orange"/>
-                        
                         <ContentPresenter Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Grid>
+                    <ControlTemplate.Triggers>
+                        <EventTrigger RoutedEvent="Button.Click">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <DoubleAnimation Storyboard.TargetName="orgn" Storyboard.TargetProperty="(Ellipse.Width)" To="100" Duration="0:0:1"/>
+                                    <DoubleAnimation Storyboard.TargetName="orgn" Storyboard.TargetProperty="(Ellipse.Height)" To="100" Duration="0:0:1"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Button.Template>
-            <Button.Triggers>
-                <EventTrigger RoutedEvent="Button.Click">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimation Storyboard.TargetName="orgn" Storyboard.TargetProperty="Width" To="95" Duration="0:0:0:0.2"></DoubleAnimation>
-                            <DoubleAnimation Storyboard.TargetName="orgn" Storyboard.TargetProperty="Height" To="95" Duration="0:0:0:0.2"></DoubleAnimation>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-                <EventTrigger RoutedEvent="MouseLeave">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimation Storyboard.TargetName="orgn"  Storyboard.TargetProperty="Height" To="80" Duration="0:0:0:1"></DoubleAnimation>
-                            <DoubleAnimation  Storyboard.TargetName="orgn" Storyboard.TargetProperty="Width" To="80" Duration="0:0:0:1"></DoubleAnimation>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-            </Button.Triggers>
         </Button>
 
     </Grid>
